<resources>
    <string name="app_name">esk8pal</string>
    <string name="title_home">Home</string>
    <string name="title_rides">Rides</string>
    <string name="title_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="ride_header">Ride</string>
    <string name="wifi_header">Wifi settings</string>
    <string name="storage_header">Storage</string>

    <string name="automatic_ride_status">Start ride manually</string>
    <string name="reply_title">Default reply action</string>

    <string name="wifi_enabled">Enable wifi</string>
    <string name="wifi_pass">Wifi password</string>
    <string name="wifi_ssid">Wifi SSID</string>

    <string name="storage">Storage</string>
    <string name="channel_name">Ride details</string>
</resources>
