<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ride_header">

        <SwitchPreferenceCompat
            app:key="manual_ride_start"
            app:title="@string/automatic_ride_status" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/wifi_header">

        <SwitchPreferenceCompat
            app:key="wifi_enabled"
            app:title="@string/wifi_enabled" />

        <EditTextPreference
            app:key="wifi_ssid"
            app:title="@string/wifi_ssid"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="wifi_pass"
            app:title="@string/wifi_pass"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage_header">

        <EditTextPreference
            android:clickable="false"
            app:key="storage"
            app:title="@string/storage"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
